--- a/pipelines/_ingredients/VerifyDark.yaml
+++ b/pipelines/_ingredients/VerifyDark.yaml
@@ -46,13 +46,13 @@ tasks:
     class: lsst.pipe.tasks.visualizeVisit.VisualizeMosaicExpTask
     config:
       connections.inputExps: 'postIsrBin1'
-      connections.outputData: 'verifyDarkMosaic1'
+      connections.outputData: 'verifyDarkResidual1'
       binning: 8
   mosaicExp2:
     class: lsst.pipe.tasks.visualizeVisit.VisualizeMosaicExpTask
     config:
       connections.inputExps: 'postIsrBin2'
-      connections.outputData: 'verifyDarkMosaic2'
+      connections.outputData: 'verifyDarkResidual2'
       binning: 64
 contracts:
   - verifyDarkApply.binFactor1 == mosaicExp1.binning
