Switch to bin-size based names.

--- a/pipelines/_ingredients/VerifyBias.yaml
+++ b/pipelines/_ingredients/VerifyBias.yaml
@@ -9,6 +9,8 @@ tasks:
     config:
       connections.ccdExposure: 'raw'
       connections.outputExposure: 'verifyBiasProc'
+      connections.outputBin1Exposure: 'verifyBiasProcBin8'
+      connections.outputBin2Exposure: 'verifyBiasProcBin64'
       overscan.fitType: 'MEDIAN_PER_ROW'
       doBias: true
       doVariance: true
@@ -64,18 +66,18 @@ tasks:
       hasInputResults: true
       hasMatrixCatalog: true
   analyzeBiasCore: lsst.analysis.tools.tasks.VerifyCalibAnalysisTask
-  mosaicExp1:
+  mosaicExp8:
     class: lsst.pipe.tasks.visualizeVisit.VisualizeMosaicExpTask
     config:
-      connections.inputExps: 'postIsrBin1'
-      connections.outputData: 'verifyBiasResidual1'
+      connections.inputExps: 'verifyBiasProcBin8'
+      connections.outputData: 'verifyBiasResidual8'
       binning: 8
-  mosaicExp2:
+  mosaicExp64:
     class: lsst.pipe.tasks.visualizeVisit.VisualizeMosaicExpTask
     config:
-      connections.inputExps: 'postIsrBin2'
-      connections.outputData: 'verifyBiasResidual2'
+      connections.inputExps: 'verifyBiasProcBin64'
+      connections.outputData: 'verifyBiasResidual64'
       binning: 64
 contracts:
-  - verifyBiasApply.binFactor1 == mosaicExp1.binning
-  - verifyBiasApply.binFactor2 == mosaicExp2.binning
+  - verifyBiasApply.binFactor1 == mosaicExp8.binning
+  - verifyBiasApply.binFactor2 == mosaicExp64.binning
