--- a/pipelines/_ingredients/VerifyFlat.yaml
+++ b/pipelines/_ingredients/VerifyFlat.yaml
@@ -5,6 +5,8 @@ tasks:
     config:
       connections.ccdExposure: 'raw'
       connections.outputExposure: 'verifyFlatProc'
+      connections.outputBin1Exposure: 'verifyFlatProcBin8'
+      connections.outputBin2Exposure: 'verifyFlatProcBin64'
       # Disable downstream processing.
       doApplyGains: false
       doFringe: false
@@ -39,18 +41,18 @@ tasks:
       connections.outputResults: 'verifyFlatResults'
       hasInputResults: true
       hasMatrixCatalog: false
-  mosaicExp1:
+  mosaicExp8:
     class: lsst.pipe.tasks.visualizeVisit.VisualizeMosaicExpTask
     config:
-      connections.inputExps: 'postIsrBin1'
-      connections.outputData: 'verifyFlatResidual1'
+      connections.inputExps: 'verifyFlatProcBin8'
+      connections.outputData: 'verifyFlatResidual8'
       binning: 8
-  mosaicExp2:
+  mosaicExp64:
     class: lsst.pipe.tasks.visualizeVisit.VisualizeMosaicExpTask
     config:
-      connections.inputExps: 'postIsrBin2'
-      connections.outputData: 'verifyFlatResidual2'
+      connections.inputExps: 'verifyFlatProcBin64'
+      connections.outputData: 'verifyFlatResidual64'
       binning: 64
 contracts:
-  - verifyFlatApply.binFactor1 == mosaicExp1.binning
-  - verifyFlatApply.binFactor2 == mosaicExp2.binning
+  - verifyFlatApply.binFactor1 == mosaicExp8.binning
+  - verifyFlatApply.binFactor2 == mosaicExp64.binning
