--- a/pipelines/_ingredients/verifyBfk.yaml
+++ b/pipelines/_ingredients/verifyBfk.yaml
@@ -16,6 +16,7 @@ tasks:
       doApCorr: false
       doDeblend: false
       doMeasurePsf: false
+      doNormalizedCalibration: false
   verifyUncorrectedBfkIsr:
     class: lsst.ip.isr.IsrTask
     config:
@@ -34,6 +35,7 @@ tasks:
       doApCorr: false
       doDeblend: false
       doMeasurePsf: false
+      doNormalizedCalibration: false
   verifyBfkDet:
     class: lsst.cp.verify.CpVerifyBfkTask
     config:
