Drop flatStats that conflicts with butler definitions.

--- a/pipelines/_ingredients/verifyFlat.yaml
+++ b/pipelines/_ingredients/verifyFlat.yaml
@@ -24,21 +24,23 @@ tasks:
       connections.inputResults: "verifyFlatDetResults"
       connections.outputStats: "verifyFlatExpStats"
       connections.outputResults: "verifyFlatExpResults"
+      doDropStats: true
       hasInputResults: true
       hasMatrixCatalog: false
       stageName: "flat"
-  verifyFlat:
+  verifyFlatX:
     class: lsst.cp.verify.CpVerifyRunMergeByFilterTask
     config:
       connections.inputStats: "verifyFlatExpStats"
       connections.inputResults: "verifyFlatExpResults"
       connections.outputStats: "verifyFlatStats"
       connections.outputResults: "verifyFlatResults"
+      doDropStats: true
       hasInputResults: true
       hasMatrixCatalog: false
 contracts:
   - verifyFlatDet.connections.inputExp == verifyFlatIsr.connections.outputExposure
   - verifyFlatExp.connections.inputStats == verifyFlatDet.connections.outputStats
   - verifyFlatExp.connections.inputResults == verifyFlatDet.connections.outputResults
-  - verifyFlat.connections.inputStats == verifyFlatExp.connections.outputStats
-  - verifyFlat.connections.inputResults == verifyFlatExp.connections.outputResults
+  - verifyFlatX.connections.inputStats == verifyFlatExp.connections.outputStats
+  - verifyFlatX.connections.inputResults == verifyFlatExp.connections.outputResults
