Use photodiode in LSST linearity verification by default.

--- a/pipelines/_ingredients/verifyLinearizerLSST.yaml
+++ b/pipelines/_ingredients/verifyLinearizerLSST.yaml
@@ -52,7 +52,7 @@ tasks:
       linearityType: "Spline"
       splineKnots: 10
       trimmedState: false
-      usePhotodiode: false
+      usePhotodiode: true
   verifyLinearizerCalib:
     class: lsst.cp.verify.CpVerifyLinearityTask
     config:
