--- a/pipelines/_ingredients/verifyBiasLSST.yaml
+++ b/pipelines/_ingredients/verifyBiasLSST.yaml
@@ -26,6 +26,7 @@ tasks:
       doSaturation: false
       doSuspect: false
       doCrosstalk: true
+      crosstalk.doQuadraticCrosstalkCorrection: true
       doWidenSaturationTrails: false
       doInterpolate: true
       maskNegativeVariance: false
