--- a/pipelines/_ingredients/verifyLinearizerLSST.yaml
+++ b/pipelines/_ingredients/verifyLinearizerLSST.yaml
@@ -13,7 +13,6 @@ tasks:
       doBias: false
       doDark: false
       doFlat: false
-      nominalGain: 1.0
       doDiffNonLinearCorrection: false
       doBootstrap: true
       doDeferredCharge: false
@@ -23,6 +22,7 @@ tasks:
       doSaturation: false
       doSuspect: false
       doCrosstalk: true
+      crosstalk.doQuadraticCrosstalkCorrection: false
       doWidenSaturationTrails: false
       doInterpolate: false
       maskNegativeVariance: false
