--- a/pipelines/_ingredients/verifyBias.yaml
+++ b/pipelines/_ingredients/verifyBias.yaml
@@ -69,12 +69,14 @@ tasks:
     config:
       connections.inputExps: 'verifyBiasIsrExpBin8'
       connections.outputData: 'verifyBiasResidual8'
+      dimensions: '("instrument", "exposure")'
       binning: 8
   mosaicExp64:
     class: lsst.pipe.tasks.visualizeVisit.VisualizeMosaicExpTask
     config:
       connections.inputExps: 'verifyBiasIsrExpBin64'
       connections.outputData: 'verifyBiasResidual64'
+      dimensions: '("instrument", "exposure")'
       binning: 64
 contracts:
   - verifyBiasIsr.binFactor1 == mosaicExp8.binning
