--- a/bps/templates/bps_verify_bfk.yaml
+++ b/bps/templates/bps_verify_bfk.yaml
@@ -7,5 +7,5 @@ payload:
   payloadName: "${INSTRUMENT}_${TICKET}_verify_bfk"
   output: "${USER_CALIB_PREFIX}${INSTRUMENT}/calib/${TICKET}/${TAG}/verifyBfk.${VERIFY_RERUN}"
   butlerConfig: "${REPO}"
-  inCollection: "${USER_CALIB_PREFIX}${INSTRUMENT}/calib/${TICKET}/${TAG},${RAW_COLLECTION},${CALIB_COLLECTIONS}"
+  inCollection: "${USER_CALIB_PREFIX}${INSTRUMENT}/calib/${TICKET},${RAW_COLLECTION},${CALIB_COLLECTIONS}"
   dataQuery: "${SELECTION_PTC_BFK_V}"
