--- a/bps/templates/bps_verify_flat_r.yaml
+++ b/bps/templates/bps_verify_flat_r.yaml
@@ -7,5 +7,5 @@ payload:
   payloadName: "${INSTRUMENT}_${TICKET}_verify_flat_r"
   output: "${USER_CALIB_PREFIX}${INSTRUMENT}/calib/${TICKET}/${TAG}/verifyFlat-r.${VERIFY_RERUN}"
   butlerConfig: "${REPO}"
-  inCollection: "${USER_CALIB_PREFIX}${INSTRUMENT}/calib/${TICKET}/${TAG},${RAW_COLLECTION},${CALIB_COLLECTIONS}"
+  inCollection: "${USER_CALIB_PREFIX}${INSTRUMENT}/calib/${TICKET},${RAW_COLLECTION},${CALIB_COLLECTIONS}"
   dataQuery: "${SELECTION_FLAT_r_V} and band='r'"
