--- a/bps/templates/bps_verify_flat_y.yaml
+++ b/bps/templates/bps_verify_flat_y.yaml
@@ -7,5 +7,5 @@ payload:
   payloadName: "${INSTRUMENT}_${TICKET}_verify_flat_y"
   output: "${USER_CALIB_PREFIX}${INSTRUMENT}/calib/${TICKET}/${TAG}/verifyFlat-y.${VERIFY_RERUN}"
   butlerConfig: "${REPO}"
-  inCollection: "${USER_CALIB_PREFIX}${INSTRUMENT}/calib/${TICKET}/${TAG},${RAW_COLLECTION},${CALIB_COLLECTIONS}"
+  inCollection: "${USER_CALIB_PREFIX}${INSTRUMENT}/calib/${TICKET},${RAW_COLLECTION},${CALIB_COLLECTIONS}"
   dataQuery: "${SELECTION_FLAT_y_V and band='y'}"
