--- a/pipelines/LSSTComCam/verifyDefects.yaml
+++ b/pipelines/LSSTComCam/verifyDefects.yaml
@@ -2,3 +2,8 @@ description: cp_verify for Defects measured from combined calibrations.
 instrument: lsst.obs.lsst.LsstComCam
 imports:
   - location: $CP_VERIFY_DIR/pipelines/_ingredients/verifyDefectsLSST.yaml
+tasks:
+  verifyDefectsIsr:
+    class: lsst.ip.isr.IsrTaskLSST
+    config:
+      doDeferredCharge: true
