Add placeholder for verification task in illumination correction pipeline.

--- a/pipelines/_ingredients/verifyIlluminationCorrectionLSST.yaml
+++ b/pipelines/_ingredients/verifyIlluminationCorrectionLSST.yaml
@@ -80,6 +80,7 @@ tasks:
       connections.cycleNumber: 5
       connections.illumination_corrections: "verifyIlluminationCorrection"
       include_wcs_jacobian: false
+  # TODO: DM-49192 Add verification task to check verifyIlluminationCorrection frames.
   verifyIlluminationCorrectionBin8:
     class: lsst.pipe.tasks.visualizeVisit.VisualizeBinCalibFilterTask
     config:
