Add clustering by exposure to BPS templates

--- a/bps/templates/bps_verify_bfk.yaml
+++ b/bps/templates/bps_verify_bfk.yaml
@@ -3,6 +3,15 @@ pipelineYaml: "${CP_VERIFY_DIR}/pipelines/${INSTRUMENT}/verifyBfk.yaml"
 project: "${TICKET}"
 campaign: "${TICKET}"
 
+clusterAlgorithm: lsst.ctrl.bps.quantum_clustering_funcs.dimension_clustering
+cluster:
+  verifyBfkIsrByExposure:
+    pipetasks: verifyBfkIsr
+    dimensions: exposure
+  verifyUncorrectedBfkIsrByExposure:
+    pipetasks: verifyUncorrectedBfkIsr
+    dimensions: exposure
+
 payload:
   payloadName: "${INSTRUMENT}_${TICKET}_verify_bfk"
   output: "${USER_CALIB_PREFIX}${INSTRUMENT}/calib/${TICKET}/${TAG}/verifyBfk.${VERIFY_RERUN}"
