--- a/bps/templates/bps_verify_linearizer.yaml
+++ b/bps/templates/bps_verify_linearizer.yaml
@@ -3,6 +3,15 @@ pipelineYaml: "${CP_VERIFY_DIR}/pipelines/${INSTRUMENT}/verifyLinearizer.yaml"
 project: "${TICKET}"
 campaign: "${TICKET}"
 
+clusterAlgorithm: lsst.ctrl.bps.quantum_clustering_funcs.dimension_clustering
+cluster:
+  verifyLinearizerIsrByExposure:
+    pipetasks: verifyLinearizerIsr
+    dimensions: exposure
+  verifyLinearizerPtcExtractPairByExposure:
+    pipetasks: verifyLinearizerPtcExtractPair
+    dimensions: exposure
+
 payload:
   payloadName: "${INSTRUMENT}_${TICKET}_verify_linearizer"
   output: "${USER_CALIB_PREFIX}${INSTRUMENT}/calib/${TICKET}/${TAG}/verifyLinearizer.${RERUN}"
