--- a/bps/templates/bps_verify_ptc.yaml
+++ b/bps/templates/bps_verify_ptc.yaml
@@ -2,6 +2,7 @@ pipelineYaml: "${CP_VERIFY_DIR}/pipelines/${INSTRUMENT}/verifyPtc.yaml"
 
 project: "${TICKET}"
 campaign: "${TICKET}"
+submitPath: "${SCRATCH}/submit/{outputRun}"
 
 payload:
   payloadName: "${INSTRUMENT}_${TICKET}_verify_ptc"
