--- a/pipelines/LSSTCam-imSim/verifyDefects.yaml
+++ b/pipelines/LSSTCam-imSim/verifyDefects.yaml
@@ -2,3 +2,6 @@ description: cp_verify for Defects measured from combined calibrations.
 instrument: lsst.obs.lsst.LsstCamImSim
 imports:
   - location: $CP_VERIFY_DIR/pipelines/_ingredients/verifyDefects.yaml
+  - location: $ANALYSIS_TOOLS_DIR/pipelines/cpCore.yaml
+    include:
+      - analyzeDefectCore
