--- a/pipelines/_ingredients/verifyFlatLSST.yaml
+++ b/pipelines/_ingredients/verifyFlatLSST.yaml
@@ -16,8 +16,7 @@ tasks:
         config.crosstalk.doQuadraticCrosstalkCorrection = True
         config.doApplyGains = True
         config.doLinearize = True
-        # TODO DM-46426: Add cpCtiLSST pipeline so that this can be True.
-        config.doDeferredCharge = False
+        config.doDeferredCharge = True
         config.doBias = True
         config.doDark = True
         config.doDefect = True
