Turn of deferred charge correction for LATISS for calib verification

--- a/pipelines/LATISS/verifyBias.yaml
+++ b/pipelines/LATISS/verifyBias.yaml
@@ -7,3 +7,4 @@ tasks:
     class: lsst.ip.isr.IsrTaskLSST
     config:
       crosstalk.doQuadraticCrosstalkCorrection: false
+      doDeferredCharge: false
