--- a/pipelines/LATISS/verifyDark.yaml
+++ b/pipelines/LATISS/verifyDark.yaml
@@ -7,3 +7,4 @@ tasks:
     class: lsst.ip.isr.IsrTaskLSST
     config:
       crosstalk.doQuadraticCrosstalkCorrection: false
+      doDeferredCharge: false
