--- a/pipelines/_ingredients/verifyDefectsLSST.yaml
+++ b/pipelines/_ingredients/verifyDefectsLSST.yaml
@@ -26,15 +26,15 @@ tasks:
         config.doBrighterFatter = True
         config.doFlat = True
         config.isrStats.doCopyCalibDistributionStatistics = True
-  verifyDefectsChar:
-    class: lsst.pipe.tasks.characterizeImage.CharacterizeImageTask
-    config:
-      connections.exposure: "verifyDefectsIsrExp"
-      connections.characterized: "verifyDefectsIcExp"
-      connections.sourceCat: "verifyDefectsIcSrc"
-      doApCorr: false
-      doDeblend: false
-      doNormalizedCalibration: false
+  # verifyDefectsChar:
+  #   class: lsst.pipe.tasks.characterizeImage.CharacterizeImageTask
+  #   config:
+  #     connections.exposure: "verifyDefectsIsrExp"
+  #     connections.characterized: "verifyDefectsIcExp"
+  #     connections.sourceCat: "verifyDefectsIcSrc"
+  #     doApCorr: false
+  #     doDeblend: false
+  #     doNormalizedCalibration: false
   verifyUncorrectedDefectsIsr:
     class: lsst.ip.isr.IsrTaskLSST
     config:
@@ -59,37 +59,37 @@ tasks:
         config.doFlat = True
         config.doCalculateStatistics = False
         config.isrStats.doCopyCalibDistributionStatistics = True
-  verifyUncorrectedDefectsChar:
-    class: lsst.pipe.tasks.characterizeImage.CharacterizeImageTask
-    config:
-      connections.exposure: "verifyUncorrectedDefectsIsrExp"
-      connections.characterized: "verifyUncorrectedDefectsIcExp"
-      connections.sourceCat: "verifyUncorrectedDefectsIcSrc"
-      connections.backgroundModel: "verifyUncorrectedDefectsBackground"
-      connections.outputSchema: "verifyUncorrectedDefects_schema"
-      doApCorr: false
-      doDeblend: false
-      doMeasurePsf: false
-      doNormalizedCalibration: false
-  verifyDefectsDet:
+  # verifyUncorrectedDefectsChar:
+  #   class: lsst.pipe.tasks.characterizeImage.CharacterizeImageTask
+  #   config:
+  #     connections.exposure: "verifyUncorrectedDefectsIsrExp"
+  #     connections.characterized: "verifyUncorrectedDefectsIcExp"
+  #     connections.sourceCat: "verifyUncorrectedDefectsIcSrc"
+  #     connections.backgroundModel: "verifyUncorrectedDefectsBackground"
+  #     connections.outputSchema: "verifyUncorrectedDefects_schema"
+  #     doApCorr: false
+  #     doDeblend: false
+  #     doMeasurePsf: false
+  #     doNormalizedCalibration: false
+  verifyDefectsDet2:
     class: lsst.cp.verify.CpVerifyDefectsTask
     config:
-      connections.inputExp: "verifyDefectsIcExp"
-      connections.uncorrectedExp: "verifyUncorrectedDefectsIcExp"
-      connections.inputCatalog: "verifyDefectsIcSrc"
-      connections.uncorrectedCatalog: "verifyUncorrectedDefectsIcSrc"
-      connections.outputStats: "verifyDefectsDetStats"
-      connections.outputResults: "verifyDefectsDetResults"
+      connections.inputExp: "verifyDefectsIsrExp"
+      connections.uncorrectedExp: "verifyUncorrectedDefectsIsrExp"
+#      connections.inputCatalog: ""
+#      connections.uncorrectedCatalog: ""
+      connections.outputStats: "verifyDefectsDetStats2"
+      connections.outputResults: "verifyDefectsDetResults2" #here change name for now (might want to clean up)
       useIsrStatistics: true
       hasMatrixCatalog: false
-  verifyDefectsExp:
+  verifyDefectsExp2:
     class: lsst.cp.verify.CpVerifyVisitExpMergeTask
     config:
-      connections.inputStats: "verifyDefectsDetStats"
-      connections.inputResults: "verifyDefectsDetResults"
+      connections.inputStats: "verifyDefectsDetStats2"
+      connections.inputResults: "verifyDefectsDetResults2"
       connections.outputStats: "verifyDefectsExpStats"
       connections.outputResults: "verifyDefectsExpResults"
-      mergeDimension: "visit"
+      mergeDimension: "exposure"
       hasInputResults: true
       hasMatrixCatalog: false
   verifyDefects:
@@ -103,13 +103,13 @@ tasks:
       hasInputResults: true
       hasMatrixCatalog: false
 contracts:
-  - verifyDefectsChar.connections.exposure == verifyDefectsIsr.connections.outputExposure
-  - verifyUncorrectedDefectsChar.connections.exposure == verifyUncorrectedDefectsIsr.connections.outputExposure
-  - verifyDefectsDet.connections.inputExp == verifyDefectsChar.connections.characterized
-  - verifyDefectsDet.connections.uncorrectedExp == verifyUncorrectedDefectsChar.connections.characterized
-  - verifyDefectsDet.connections.inputCatalog == verifyDefectsChar.connections.sourceCat
-  - verifyDefectsDet.connections.uncorrectedCatalog == verifyUncorrectedDefectsChar.connections.sourceCat
-  - verifyDefectsExp.connections.inputStats == verifyDefectsDet.connections.outputStats
-  - verifyDefectsExp.connections.inputResults == verifyDefectsDet.connections.outputResults
-  - verifyDefects.connections.inputStats == verifyDefectsExp.connections.outputStats
-  - verifyDefects.connections.inputResults == verifyDefectsExp.connections.outputResults
+# - verifyDefectsChar.connections.exposure == verifyDefectsIsr.connections.outputExposure
+# - verifyUncorrectedDefectsChar.connections.exposure == verifyUncorrectedDefectsIsr.connections.outputExposure
+# - verifyDefectsDet.connections.inputExp == verifyDefectsChar.connections.characterized
+# - verifyDefectsDet.connections.uncorrectedExp == verifyUncorrectedDefectsChar.connections.characterized
+# - verifyDefectsDet.connections.inputCatalog == verifyDefectsChar.connections.sourceCat
+# - verifyDefectsDet.connections.uncorrectedCatalog == verifyUncorrectedDefectsChar.connections.sourceCat
+ - verifyDefectsExp2.connections.inputStats == verifyDefectsDet2.connections.outputStats
+ - verifyDefectsExp2.connections.inputResults == verifyDefectsDet2.connections.outputResults
+#  - verifyDefects.connections.inputStats == verifyDefectsExp.connections.outputStats
+#  - verifyDefects.connections.inputResults == verifyDefectsExp.connections.outputResults
